# serializer version: 1
# name: test_device_registry_entry[api_discovery_items0-9.10.1]
  'http://1.2.3.4:80'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].6
  '9.10.1'
# ---
# name: test_device_registry_entry[api_discovery_items0]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'http://1.2.3.4:80',
    'connections': set({
      tuple(
        'mac',
        '00:40:8c:12:34:56',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'axis',
        '00:40:8c:12:34:56',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Axis Communications AB',
    'model': 'A1234 Network Camera',
    'model_id': None,
    'name': 'home',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '00:40:8c:12:34:56',
    'suggested_area': None,
    'sw_version': '9.10.1',
    'via_device_id': None,
  })
# ---
# name: test_device_registry_entry[api_discovery_items0].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items0].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items0].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items0].6
  '9.10.1'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1]
  'http://1.2.3.4:80'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].6
  '9.80.1'
# ---
# name: test_device_registry_entry[api_discovery_items1]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'http://1.2.3.4:80',
    'connections': set({
      tuple(
        'mac',
        '00:40:8c:12:34:56',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'axis',
        '00:40:8c:12:34:56',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'Axis Communications AB',
    'model': 'A1234 Network Camera',
    'model_id': None,
    'name': 'home',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': '00:40:8c:12:34:56',
    'suggested_area': None,
    'sw_version': '9.80.1',
    'via_device_id': None,
  })
# ---
# name: test_device_registry_entry[api_discovery_items1].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items1].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items1].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items1].6
  '9.80.1'
# ---
